Added Linux Device List and modified example/build scripts for vcpkg submodule

--- a/.vscode-example-linux/settings.json
+++ b/.vscode-example-linux/settings.json
@@ -2,7 +2,7 @@
     "cmake.configureOnOpen": true,
     "cmake.configureOnEdit": false,
     "cmake.configureSettings": {
-        "CMAKE_TOOLCHAIN_FILE": "~/vcpkg/scripts/buildsystems/vcpkg.cmake"
+        "CMAKE_TOOLCHAIN_FILE": "svcpkg/scripts/buildsystems/vcpkg.cmake"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++",
     "files.associations": {
