--- a/.vscode-example-win/settings.json
+++ b/.vscode-example-win/settings.json
@@ -2,6 +2,6 @@
     "cmake.configureOnOpen": true,
     "cmake.configureOnEdit": false,
     "cmake.configureSettings": {
-        "CMAKE_TOOLCHAIN_FILE": "C:/src/vcpkg/scripts/buildsystems/vcpkg.cmake"
+        "CMAKE_TOOLCHAIN_FILE": "vcpkg/scripts/buildsystems/vcpkg.cmake"
     },
 }
