--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ build/*
 # Custom Batch Files
 *.bat
 
+# Custom Script Files
+*.sh
+
 #########################
 # Python Related Ignore #
 #########################
