--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ SET(PLATFORM_HEADER_FILES_Linux
   ${3RD_PARTY_ROS_USB_CAM}/include/usb_cam/formats/utils.hpp
   ${3RD_PARTY_ROS_USB_CAM}/include/usb_cam/formats/uyvy.hpp
   ${3RD_PARTY_ROS_USB_CAM}/include/usb_cam/formats/yuyv.hpp
-  3rd-party/v4l2-list-devices/include/list-devices.hpp
+  ${3RD_PARTY_DIR}/v4l2-list-devices/include/list_devices.hpp
 )
 
 SET(PLATFORM_SOURCE_FILES_Linux
@@ -188,6 +188,7 @@ elseif(UNIX)
   set(CMAKE_SHARED_LINKER_FLAGS "-Wl,-Bsymbolic")
   target_include_directories(${PROJECT_NAME} PUBLIC 
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${3RD_PARTY_ROS_USB_CAM}/include>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${3RD_PARTY_DIR}/v4l2-list-devices/include>"
     ${FFMPEG_INCLUDE_DIRS}
   )
   target_link_directories(${PROJECT_NAME} PRIVATE ${FFMPEG_LIBRARY_DIRS})
