fixed linking to FFMPEG libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,8 +193,12 @@ elseif(UNIX)
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${3RD_PARTY_DIR}/v4l2-list-devices/include>"
     ${FFMPEG_INCLUDE_DIRS}
   )
-  target_link_directories(${PROJECT_NAME} PRIVATE ${FFMPEG_LIBRARY_DIRS})
-  target_link_libraries(${PROJECT_NAME} PRIVATE ${FFMPEG_LIBRARY_DIRS})
+  target_link_directories(${PROJECT_NAME} PRIVATE
+    ${FFMPEG_LIBRARY_DIRS}
+  )
+  target_link_libraries(${PROJECT_NAME} PRIVATE 
+    ${FFMPEG_LIBRARIES}
+  )
 endif()
 
 # specify target properties
