--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ SET(PLATFORM_HEADER_FILES_Linux
   ${PUBLIC_HEADER_DIR}/linux/context_v4l2.hpp
   ${PUBLIC_HEADER_DIR}/linux/stream_v4l2.hpp
   ${PUBLIC_HEADER_DIR}/linux/decoders_v4l2.hpp
+  ${PUBLIC_HEADER_DIR}/linux/utils_v4l2.hpp
   ${v4l2listdevices_SOURCE_DIR}/include/v4l2_list_devices/list_devices.hpp
 )
 
@@ -81,6 +82,7 @@ SET(PLATFORM_SOURCE_FILES_Linux
   src/linux/context_v4l2.cpp
   src/linux/stream_v4l2.cpp
   src/linux/decoders_v4l2.cpp
+  src/linux/utils_v4l2.cpp
 )
 
 # Add Project sources
