--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ target_sources(${PROJECT_NAME} PRIVATE
   src/image_rotate.cpp
   src/feature_detection_chessboard.cpp
   src/ar_camera_calibration.cpp
+  src/ar_project_points.cpp
   "${PLATFORM_SOURCE_FILES_${CMAKE_HOST_SYSTEM_NAME}}"
 )
 
