--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ target_sources(${PROJECT_NAME} PRIVATE
   src/ar_camera_calibration.cpp
   src/ar_project_points.cpp
   src/ar_obj_loader.cpp
+  src/ar_solve_pnp.cpp
   "${PLATFORM_SOURCE_FILES_${CMAKE_HOST_SYSTEM_NAME}}"
 )
 
