Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ build:linux:
     - .vcpkg_cache_linux
   image: gcc:latest
   tags:
-    - linux
+    - saas-linux-medium-amd64
   before_script:
     - apt-get update -y
     - apt-get install -y build-essential g++ python3  linux-libc-dev bison autoconf automake libtool pkg-config python3-jinja2 nasm libx11-dev libxft-dev libxext-dev libxi-dev  libxtst-dev python3-distutils ninja-build gperf libdbus-1-dev libgl1-mesa-dev libgles2-mesa-dev libglu1-mesa-dev libudev-dev libx11-xcb-dev  libxcursor-dev  libxdamage-dev libxinerama-dev libxrandr-dev zip unzip tar curl
@@ -68,7 +68,7 @@ build:windows:
     - .build_template
     - .vcpkg_cache_windows
   tags:
-    - windows
+    - saas-windows-medium-amd64
   before_script:
     - 'Write-Host "Using pre-installed Visual Studio"'
     - 'Write-Host "Checking CMake version: $(cmake --version)"'
