--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -27,20 +27,24 @@ jobs:
         arch: [x86, x64]
         include:
           - os: windows-latest
-            build_target: windows
+            build_target: windows-static
           - os: ubuntu-latest
-            build_target: linux-desktop
+            build_target: linux
         exclude:
           - os: ubuntu-latest
             arch: x86
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install OS dependencies
+      if: ${{ matrix.os }} == `ubuntu-latest`
+      run: apt install build-essential g++ python3  linux-libc-dev bison autoconf automake libtool pkg-config python3-jinja2 nasm libx11-dev libxft-dev libxext-dev libxi-dev  libxtst-dev python3-distutils ninja-build gperf libdbus-1-dev libgl1-mesa-dev libgles2-mesa-dev libglu1-mesa-dev libudev-dev libx11-xcb-dev  libxcursor-dev  libxdamage-dev libxinerama-dev libxrandr-dev zip unzip tar curl
     - name: vcpkg build
       id: vcpkg
       uses: johnwason/vcpkg-action@v6
       with:
         manifest-dir: ${{ github.workspace }} # Set to directory containing vcpkg.json
+        triplet: ${{ matrix.arch }}-${{ matrix.build_target }}
         token: ${{ github.token }}
         github-binarycache: true
         
@@ -52,5 +56,13 @@ jobs:
       with:
         arch: ${{ matrix.arch }}
 
+    - name: Create build directory
+      run: mkdir -p build
+
+    - name: Configure CMake
+      working-directory: build
+      run: cmake .. -G Ninja -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=${{ matrix.arch }}-${{ matrix.build_target }}
+
     - name: Build
-      run: cmake --preset=${{ matrix.build_target }}-release && cmake --build --preset=${{ matrix.build_target }}-release-build
+      working-directory: build
+      run: cmake --build . --config Release
