--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -66,3 +66,9 @@ jobs:
     - name: Build
       working-directory: build
       run: cmake --build . --config Release
+
+    - name: Store Build Output
+    - uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.arch }}-${{ matrix.build_target }}
+        path: build/shared-binary
